# RECEIPT-QUOTE-CALC--WCB

./: .gitignore  README.md  package.json  pnpm-lock.yaml  tsconfig.base.json
apps/server/: package.json  tsconfig.json
apps/server/src/: app.ts  index.ts  serverRuntime.ts
apps/server/src/auth/: accessCode.ts
apps/server/src/config/: paths.ts  serverConfig.ts
apps/server/src/export/: pdfGenerator.test.ts  pdfGenerator.ts
apps/server/src/iphone/: iphoneAccess.ts
apps/server/src/packet/: packetModel.ts  packetStore.ts  packetValidation.test.ts  packetValidation.ts
apps/server/src/receipts/: fileHash.ts  heicConverter.ts  receiptRoutes.ts  receiptStorage.ts  thumbnailGenerator.ts
apps/server/src/security/: errorHandler.ts  fileValidation.ts  safePaths.ts
apps/web/: index.html  package.json  tsconfig.json
apps/web/src/: main.tsx  styles.css  vite-env.d.ts
apps/web/src/api/: client.ts  exportApi.ts  iphoneAccessApi.ts  packetApi.ts  receiptApi.ts
apps/web/src/app/: App.tsx
apps/web/src/components/: ExportPanel.tsx  IPhoneAccessPanel.tsx  PacketHeader.tsx  QRCodePanel.tsx  ReceiptEditor.tsx  ReceiptList.tsx  ReceiptPreview.tsx  ReceiptUploadButton.tsx  ValidationWarnings.tsx
apps/web/src/types/: packet.ts
apps/web/src/utils/: formatCurrency.ts  formatDate.ts  validation.ts
docs/: DEVELOPMENT.md
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
